Mobile: Always apply `mix-blend-mode` to `#radar-jammed-overlay` to prevent "FOUFC." :stuck_out_tongue_closed_eyes:

--- a/css/aa.css
+++ b/css/aa.css
@@ -938,7 +938,7 @@ body.bnb .tv-noise-overlay {
  * higher "frame rate", and filters for a more subtle effect.
  */
 
-body.is-mobile #radar-jammed-overlay.active {
+body.is-mobile #radar-jammed-overlay {
   mix-blend-mode: soft-light;
 }
 
